--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -40,6 +40,12 @@ on:
         required: true
       NOTIFICATION_URL:
         required: true
+      CF_R2_ACCESS_KEY:
+        required: true
+      CF_R2_SECRET_KEY:
+        required: true
+      CF_R2_ENDPOINT:
+        required: true
 
 jobs:
     ProdDeploy:
@@ -100,6 +106,9 @@ jobs:
               echo "${{ secrets.MAILJET_SECRET_KEY }}" > ./secrets/MAILJET_SECRET_KEY;
               echo "${{ secrets.BASE_EMAIL }}" > ./secrets/BASE_EMAIL;
               echo "${{ secrets.NOTIFICATION_URL }}" > ./secrets/NOTIFICATION_URL;
+              echo "${{ secrets.CF_R2_ACCESS_KEY }}" > ./secrets/ACCESS_KEY;
+              echo "${{ secrets.CF_R2_SECRET_KEY }}" > ./secrets/SECRET_ACCESS_KEY;
+              echo "${{ secrets.CF_R2_ENDPOINT }}" > ./secrets/R2_ENDPOINT;
               echo "$(openssl rand 64 | base64 --wrap=0 | tr -d '+')" > ./secrets/SECRET_KEY;
               docker compose -f compose.yaml up --build -d;
               rm -rf ./secrets/;
