--- a/docker/Dockerfile_Workflow
+++ b/docker/Dockerfile_Workflow
@@ -21,6 +21,7 @@ RUN apt-get update && \
     cron \
     postgresql-client-16 \
     unzip \
+    file \
     && curl -fsSL https://rclone.org/install.sh | bash \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
