--- a/pytest.ini
+++ b/pytest.ini
@@ -17,5 +17,6 @@ markers =
 	utubs_ui: associated with utubs UI on home page
 	members_ui: associated with members UI on home page
 	urls_ui: associated with URL UI on home page
+	add_update_urls_ui: associated with adding/updating URL UI on home page
 	tags_ui: associated with tags UI on home page
 	mobile_ui: associated with mobile UI
