[Backend] Refactor url validation (#509)
* Move around CLI files into separate files

* Refactor url validation into a string parsing flow with WHATWG compliance

* Fix for CI/CD testing timeouts

* Fix for generators used in testing

* Another fix for timeouts in CI testing

* Another split for making CI not timeout

* Whoops fix the YML file too for GH Actions

--- a/pytest.ini
+++ b/pytest.ini
@@ -17,5 +17,7 @@ markers =
 	utubs_ui: associated with utubs UI on home page
 	members_ui: associated with members UI on home page
 	urls_ui: associated with URL UI on home page
+	create_urls_ui: associated with creating URL UI on home page
+	update_urls_ui: associated with updating URL UI on home page
 	tags_ui: associated with tags UI on home page
 	mobile_ui: associated with mobile UI
