--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,9 +51,11 @@ jobs:
           - [9, 'UI Home Functional Tests']
           - [10, 'UI UTub Functional Tests']
           - [11, 'UI Member Functional Tests']
-          - [12, 'UI UTub URL Functional Tests']
-          - [13, 'UI UTub Tags Functional Tests']
-          - [14, 'UI Mobile Functional Tests']
+          - [12, 'UI URL Functional Tests']
+          - [13, 'UI Create URL Functional Tests']
+          - [14, 'UI Update URL Functional Tests']
+          - [15, 'UI Tags Functional Tests']
+          - [16, 'UI Mobile Functional Tests']
 
     name: ${{ format('{0}', matrix.worker[1]) }}
 
