--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -37,3 +37,25 @@ jobs:
             MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY_INF }}
             BASE_EMAIL: ${{ secrets.BASE_EMAIL_INF }}
             NOTIFICATION_URL: ${{ secrets.NOTIFICATION_URL_INF }}
+
+    deploy-dev-2:
+        if: github.event.pull_request.merged == true
+        needs: 'build-dev'
+        name: 'CD Dev - Deploy 2'
+        uses: ./.github/workflows/dev-deploy-2.yml
+        with:
+            branch_ref: ${{ github.ref }}
+        secrets:
+            DEV_SSH_HOST: ${{ secrets.DEV_SSH_HOST_2 }}
+            DEV_SSH_USERNAME: ${{ secrets.DEV_SSH_USERNAME_2 }}
+            DEV_SSH_PRIVATE_KEY_FILENAME: ${{ secrets.DEV_SSH_PRIVATE_KEY_FILENAME_2 }}
+            DEV_SSH_PRIVATE_KEY_VALUE: ${{ secrets.DEV_SSH_PRIVATE_KEY_VALUE_2 }}
+            DEV_SERVICE_TOKEN_ID: ${{ secrets.DEV_SERVICE_TOKEN_ID_2 }}
+            DEV_SERVICE_TOKEN_SECRET: ${{ secrets.DEV_SERVICE_TOKEN_SECRET_2 }}
+            DEV_DB_NAME: ${{ secrets.DEV_DB_NAME }}
+            DEV_DB_USER: ${{ secrets.DEV_DB_USER }}
+            DEV_DB_PASSWORD: ${{ secrets.DEV_DB_PASSWORD }}
+            MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY_INF }}
+            MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY_INF }}
+            BASE_EMAIL: ${{ secrets.BASE_EMAIL_INF }}
+            NOTIFICATION_URL: ${{ secrets.NOTIFICATION_URL_INF }}
