Fixes from second dev server

--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -6,20 +6,18 @@ on:
         branches:
             - main
         types:
-            - opened
-            - synchronize
             - closed
 
 jobs:
     build-dev:
-        #if: github.event.pull_request.merged == true
+        if: github.event.pull_request.merged == true
         name: 'CD Dev - Build'
         uses: ./.github/workflows/dev-build.yml
         permissions:
             packages: write
 
     deploy-dev:
-        #if: github.event.pull_request.merged == true
+        if: github.event.pull_request.merged == true
         needs: 'build-dev'
         name: 'CD Dev - Deploy'
         uses: ./.github/workflows/dev-deploy.yml
@@ -41,7 +39,7 @@ jobs:
             NOTIFICATION_URL: ${{ secrets.NOTIFICATION_URL_INF }}
 
     deploy-dev-2:
-        #if: github.event.pull_request.merged == true
+        if: github.event.pull_request.merged == true
         needs: 'build-dev'
         name: 'CD Dev - Deploy 2'
         uses: ./.github/workflows/dev-deploy-2.yml
