Fixes from CodeQL

--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -21,6 +21,7 @@ jobs:
         needs: 'build-dev'
         name: 'CD Dev - Deploy'
         uses: ./.github/workflows/dev-deploy.yml
+        permissions: read-all
         with:
             branch_ref: ${{ github.ref }}
         secrets:
@@ -43,6 +44,7 @@ jobs:
         needs: 'build-dev'
         name: 'CD Dev - Deploy 2'
         uses: ./.github/workflows/dev-deploy-2.yml
+        permissions: read-all
         with:
             branch_ref: ${{ github.ref }}
         secrets:
