--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,16 +46,17 @@ jobs:
           - [4, 'UTub Member Integration Tests']
           - [5, 'UTub URL Integration Tests']
           - [6, 'UTub Tags Integration Tests']
-          - [7, 'CLI Integration Tests']
-          - [8, 'UI Splash Functional Tests']
-          - [9, 'UI Home Functional Tests']
-          - [10, 'UI UTub Functional Tests']
-          - [11, 'UI Member Functional Tests']
-          - [12, 'UI URL Functional Tests']
-          - [13, 'UI Create URL Functional Tests']
-          - [14, 'UI Update URL Functional Tests']
-          - [15, 'UI Tags Functional Tests']
-          - [16, 'UI Mobile Functional Tests']
+          - [7, 'Account and Support Integration Tests']
+          - [8, 'CLI Integration Tests']
+          - [9, 'UI Splash Functional Tests']
+          - [10, 'UI Home Functional Tests']
+          - [11, 'UI UTub Functional Tests']
+          - [12, 'UI Member Functional Tests']
+          - [13, 'UI URL Functional Tests']
+          - [14, 'UI Create URL Functional Tests']
+          - [15, 'UI Update URL Functional Tests']
+          - [16, 'UI Tags Functional Tests']
+          - [17, 'UI Mobile Functional Tests']
 
     name: ${{ format('{0}', matrix.worker[1]) }}
 
