--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ markers =
 	members: associated with utub member addition and removal
 	splash: associated with login, register, email validation, passwords
 	unit: associated with unit tests
+	account_and_support: associated with user account and support tooling
 	cli: associated with mock data creation and db management
 	splash_ui: associated with splash page UI
 	home_ui: associated with home page UI
