--- a/.github/workflows/dev-deploy-2.yml
+++ b/.github/workflows/dev-deploy-2.yml
@@ -37,6 +37,8 @@ on:
         required: true
       NOTIFICATION_URL:
         required: true
+      CONTACT_US_URL:
+        required: true
 
 jobs:
     DevDeploy:
@@ -104,6 +106,7 @@ jobs:
               echo "${{ secrets.MAILJET_API_KEY }}" > ./secrets/MAILJET_API_KEY;
               echo "${{ secrets.MAILJET_SECRET_KEY }}" > ./secrets/MAILJET_SECRET_KEY;
               echo "${{ secrets.NOTIFICATION_URL }}" > ./secrets/NOTIFICATION_URL;
+              echo "${{ secrets.CONTACT_US_URL }}" > ./secrets/CONTACT_US_URL;
               echo "${{ secrets.BASE_EMAIL }}" > ./secrets/BASE_EMAIL;
               echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin;
               docker compose -f compose-dev.yaml pull;
