--- a/docker/compose-dev.yaml
+++ b/docker/compose-dev.yaml
@@ -22,6 +22,7 @@ services:
       - MAILJET_SECRET_KEY
       - BASE_EMAIL
       - NOTIFICATION_URL
+      - CONTACT_US_URL
     volumes:
       - app_logs:/app/volume
     command: ["bash", "startup-flask.sh"]
@@ -59,6 +60,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - NOTIFICATION_URL=${NOTIFICATION_URL}
+      - CONTACT_US_URL=${CONTACT_US_URL}
     volumes:
       - app_logs:/app/volume
       - pgdata:/var/lib/postgresql/data:ro
@@ -73,6 +75,8 @@ secrets:
     file: ./secrets/MAILJET_SECRET_KEY
   NOTIFICATION_URL:
     file: ./secrets/NOTIFICATION_URL
+  CONTACT_US_URL:
+    file: ./secrets/CONTACT_US_URL
   BASE_EMAIL:
     file: ./secrets/BASE_EMAIL
 
