--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -38,7 +38,7 @@ jobs:
             MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY_INF }}
             BASE_EMAIL: ${{ secrets.BASE_EMAIL_INF }}
             NOTIFICATION_URL: ${{ secrets.NOTIFICATION_URL_INF }}
-            CONTACT_US_URL: ${{ secrets.CONTACT_US_URL }}
+            CONTACT_US_URL: ${{ secrets.CONTACT_US_URL_INF }}
 
     deploy-dev-2:
         if: github.event.pull_request.merged == true
