Update deps and codeql callouts

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,7 @@
 # Making this the name so badge shows something understandable
 name: CI and Tests
+permissions:
+  contents: read
 
 on: 
   pull_request:
