--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,24 +16,25 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
         with:
           ref: ${{ inputs.branch_ref }}
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
         with:
           python-version: '3.11.9'
           cache: 'pip'
           cache-dependency-path: '**/requirements-test.txt'
 
       - name: Verify Python with Black
-        uses: psf/black@stable
+        # Uses black 26.1.0
+        uses: psf/black@6305bf1ae645ab7541be4f5028a86239316178eb
         with:
           options: "--check --verbose"
 
       - name: Setup node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238
         with:
           node-version: "20"
 
