--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -1,6 +1,6 @@
 
 name: Deploy to production server
-permississions:
+permissions:
   contents: read
   packages: read
 
@@ -85,7 +85,7 @@ jobs:
               chmod 600 ~/.ssh/config
 
           - name: Checkout code
-            uses: actions/checkout@v4
+            uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
             with:
               ref: ${{ inputs.branch_ref }}
 
