--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,7 +96,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
         with:
           ref: ${{ inputs.branch_ref }}
 
@@ -106,14 +106,14 @@ jobs:
           echo "GITHUB_WORKER_ID=${{matrix.worker[0]}}" >> $GITHUB_ENV
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
         with:
           python-version: '3.11.9'
           cache: 'pip'
           cache-dependency-path: '**/requirements/requirements-test.txt'
       
       - name: Setup caching
-        uses: actions/cache@master
+        uses: actions/cache@8b402f58fbc84540c8b491a91e594a4576fec3d7
         id: cache
         with:
           path: ${{ env.pythonLocation }}/lib/python3.11/site-packages/*
