Fix deploy permissions

--- a/.github/workflows/dev-build-and-deploy.yml
+++ b/.github/workflows/dev-build-and-deploy.yml
@@ -14,6 +14,7 @@ jobs:
         name: 'CD Dev - Build'
         uses: ./.github/workflows/dev-build.yml
         permissions:
+            contents: read
             packages: write
 
     deploy-dev:
