--- a/.github/workflows/prod-build-and-deploy.yml
+++ b/.github/workflows/prod-build-and-deploy.yml
@@ -12,6 +12,7 @@ jobs:
         name: 'CD Prod - Build'
         uses: ./.github/workflows/prod-build.yml
         permissions:
+            contents: read
             packages: write
 
     deploy-prod:
