--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -60,7 +60,7 @@ jobs:
             FULL_TAG="$DATE-$SHORT_SHA"
             
             docker buildx build . \
-              --file docker/Dockerfile_Workflow \
+              --file docker/Dockerfile.Workflow \
               --platform linux/amd64,linux/arm64 \
               --tag ${IMAGE_ID}:${VERSION} \
               --tag ${IMAGE_ID}:${FULL_TAG} \
