--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -76,7 +76,7 @@ jobs:
 
           - name: SCP Compose File Into Development Server
             run: |
-              scp -T -q -o StrictHostKeyChecking=no docker/compose-dev.yaml ${{ secrets.DEV_SSH_HOST}}:~
+              scp -T -q -o StrictHostKeyChecking=no docker/compose.dev.yaml ${{ secrets.DEV_SSH_HOST}}:~
 
           # Allow environment file to be defined by GitHub secrets
           - name: Generate Environment File
@@ -106,8 +106,8 @@ jobs:
               echo "${{ secrets.CONTACT_US_URL }}" > ./secrets/CONTACT_US_URL;
               echo "${{ secrets.BASE_EMAIL }}" > ./secrets/BASE_EMAIL;
               echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin;
-              docker compose -f compose-dev.yaml pull;
-              docker compose -f compose-dev.yaml up --force-recreate --build -d;
+              docker compose -f compose.dev.yaml pull;
+              docker compose -f compose.dev.yaml up --force-recreate --build -d;
               rm -rf ./secrets;
               docker image prune -f;
               docker exec u4i-dev-flask tar -cf - -C /code/u4i/src/static . | tar -xf - -C ~/static;
@@ -122,7 +122,11 @@ jobs:
               sleep 5;
               done
 
+              mkdir -p ~/static;
               docker exec u4i-dev-flask tar -cf - -C /code/u4i/src/gen logged_in.js | tar -xf - -C ~/static;
+
+              echo "Adding mock data for development..."
+              docker exec u4i-dev-flask bash -c ". /code/venv/bin/activate && cd /code/u4i && flask addmock all";
 
               echo "Cleaning up docker login files..."
               rm -f ~/.docker/config.json
@@ -133,10 +137,10 @@ jobs:
           - name: Verify Docker Network
             run: >
               ssh -T -q -o StrictHostKeyChecking=no ${{ secrets.DEV_SSH_HOST }} '
-              hasRedis=$(docker compose -f compose-dev.yaml ps --services --filter "status=running" | grep redis);
-              hasDB=$(docker compose -f compose-dev.yaml ps --services --filter "status=running" | grep db);
-              hasWeb=$(docker compose -f compose-dev.yaml ps --services --filter "status=running" | grep web);
-              hasWorkflow=$(docker compose -f compose-dev.yaml ps --services --filter "status=running" | grep workflow);
+              hasRedis=$(docker compose -f compose.dev.yaml ps --services --filter "status=running" | grep redis);
+              hasDB=$(docker compose -f compose.dev.yaml ps --services --filter "status=running" | grep db);
+              hasWeb=$(docker compose -f compose.dev.yaml ps --services --filter "status=running" | grep web);
+              hasWorkflow=$(docker compose -f compose.dev.yaml ps --services --filter "status=running" | grep workflow);
 
               if [ -n "${hasRedis}" ] && [ -n "${hasDB}" ] && [ -n "${hasWeb}" ] && [ -n "${hasWorkflow}" ]; then
                 echo "After 30 seconds, all of the services are up!";
