--- a/docker/compose.local.yaml
+++ b/docker/compose.local.yaml
@@ -7,14 +7,17 @@ services:
     tty: true
     build:
       context: .
-      dockerfile: docker/DockerfileLocal
-    ports: 
+      dockerfile: docker/Dockerfile.Local
+    ports:
       - "8659:5000"
     user: u4i-host:u4i-host-group
     depends_on:
-      - db
-      - test-db
-      - redis
+      db:
+        condition: service_healthy
+      test-db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     env_file:
       - .env
     environment:
@@ -35,13 +38,14 @@ services:
       - ./migrations/versions:/code/u4i/migrations/versions
       - ./utils:/code/u4i/utils
       - app_logs:/app/volume
-    command: ["bash", "startup-flask.sh"]
+    command: [ "bash", "startup-flask.sh" ]
 
   selenium:
     image: selenium/standalone-chromium:latest
     container_name: u4i-selenium
     depends_on:
-      - web
+      web:
+        condition: service_healthy
     environment:
       - START_XVFB=false
       - SE_NODE_MAX_SESSIONS=5
@@ -56,53 +60,71 @@ services:
     container_name: u4i-local-workflow
     build:
       context: .
-      dockerfile: docker/Dockerfile_Workflow
+      dockerfile: docker/Dockerfile.Workflow
     env_file:
       - .env
     depends_on:
-      - web
+      web:
+        condition: service_healthy
     environment:
       - PRODUCTION=false
       - DEV_SERVER=false
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - NOTIFICATION_URL=${NOTIFICATION_URL}
+      - TZ=America/Los_Angeles # Preferred timezone for backups
     volumes:
       - app_logs:/app/volume
       - pgdata:/var/lib/postgresql/data:ro
       - workflow_logs:/app/workflow_logs
       - backups:/backups
-    command: ["bash", "/app/startup-workflow.sh"]
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "pgrep", "cron"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   db:
     image: postgres:16.3-bookworm
     container_name: u4i-local-postgres
     env_file:
-     - .env
+      - .env
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\""]
+        interval: 5s
+        timeout: 5s
+        retries: 5
 
   test-db:
     image: postgres:16.3-bookworm
     container_name: u4i-local-postgres-test
     env_file:
-     - .env
+      - .env
     environment:
       - POSTGRES_DB=${POSTGRES_TEST_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_TEST_DB\""]
+        interval: 5s
+        timeout: 5s
+        retries: 5
 
   redis:
     image: redis:6.2
     container_name: u4i-local-redis
     volumes:
       - redisdata:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   pgdata:
@@ -110,4 +132,5 @@ volumes:
   app_logs:
   workflow_logs:
   backups:
+
 
