--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -49,6 +49,7 @@ services:
         interval: 5s
         timeout: 5s
         retries: 5
+
   redis:
     image: redis:6.2
     container_name: u4i-prod-redis
@@ -68,8 +69,10 @@ services:
     container_name: u4i-prod-workflow
     image: ghcr.io/4irl/u4i-workflow:latest
     depends_on:
-      - web
-      - db
+      web:
+        condition: service_healthy
+      db:
+        condition: service_healthy
     secrets:
       - POSTGRES_DB
       - POSTGRES_USER
@@ -86,7 +89,12 @@ services:
       - pgdata:/var/lib/postgresql/data:ro
       - workflow_logs:/app/workflow_logs
       - backups:/backups
-    command: ["bash", "/app/startup-workflow.sh"]
+    healthcheck:
+      test: ["CMD", "pgrep", "cron"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 secrets:
   POSTGRES_DB:
