--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -69,7 +69,7 @@ jobs:
               chmod 600 ~/.ssh/config
 
           - name: Checkout code
-            uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
+            uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
             with:
               ref: main
               persist-credentials: false
