--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,3 +37,5 @@ jobs:
         needs: 'lint'
         name: 'Test Build Docker Container'
         uses: ./.github/workflows/test-build-image.yml
+        with:
+            branch_ref: ${{ github.event.pull_request.head.sha }}
