--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -28,13 +28,16 @@ jobs:
         steps:
         - name: Checkout
           uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+          with:
+            ref: main
+            persist-credentials: false
 
         - name: Log in to GHCR
           uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
-            with:
-              registry: ghcr.io
-              username: ${{ github.actor }}
-              password: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            registry: ghcr.io
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
 
         - name: Extract metadata (tags, labels)
           id: meta
