--- a/.github/workflows/test-build-image.yml
+++ b/.github/workflows/test-build-image.yml
@@ -5,6 +5,10 @@ permissions:
 
 on:
   workflow_call:
+    inputs:
+      branch_ref:
+        required: true
+        type: string
 
 jobs:
     ProdBuild:
@@ -22,15 +26,15 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                ref: ${{ inputs.branch_ref }}
 
-            # Required for the --mount=type=cache in your Dockerfile to work
+            # Required for the --mount=type=cache in Dockerfile to work
             - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+              uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
 
             - name: Build ${{ matrix.name }}
-              uses: docker/setup-buildx-action@v3
-            - name: Build ${{ matrix.name }}
-              uses: docker/build-push-action@v6
+              uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
               with:
                 context: .
                 file: ${{ matrix.file }}
