Fix security recommendation

--- a/.github/workflows/test-build-image.yml
+++ b/.github/workflows/test-build-image.yml
@@ -4,10 +4,6 @@ permissions:
 
 on:
   workflow_call:
-    inputs:
-      branch_ref:
-        required: true
-        type: string
 
 jobs:
     ProdBuild:
@@ -24,9 +20,7 @@ jobs:
 
         steps:
             - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                ref: ${{ inputs.branch_ref }}
+              uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
             # Required for the --mount=type=cache in Dockerfile to work
             - name: Set up Docker Buildx
