--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -73,3 +73,4 @@ EXPOSE 5000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD wget --no-verbose --tries=1 --spider http://localhost:5000/health || exit 1
 
+CMD ["bash", "startup-flask.sh"]
