--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,23 +12,22 @@ jobs:
     format:
         name: 'Code Quality'
         uses: ./.github/workflows/format.yml
-        with:
-            branch_ref: ${{ github.event.pull_request.head.sha }}
 
     lint:
         needs: 'format'
         name: 'Code Quality'
         uses: ./.github/workflows/lint.yml
-        with:
-            branch_ref: ${{ github.event.pull_request.head.sha }}
 
     test:
         needs: 'lint'
         name: 'Test'
         uses: ./.github/workflows/test.yml
-        with:
-            branch_ref: ${{ github.event.pull_request.head.sha }}
         secrets:
             MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
             MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY }}
             BASE_EMAIL: ${{ secrets.BASE_EMAIL }}
+
+    build-image-test:
+        needs: 'lint'
+        name: 'Test Build Docker Container'
+        uses: ./.github/workflows/test-build-image.yml
