--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,10 +4,6 @@ permissions:
 
 on: 
   workflow_call:
-    inputs:
-      branch_ref:
-        required: true
-        type: string
 
 jobs:
   Format:
@@ -16,25 +12,22 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
-        with:
-          ref: ${{ inputs.branch_ref }}
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
       - name: Setup Python
-        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
+        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
           python-version: '3.11.9'
           cache: 'pip'
           cache-dependency-path: '**/requirements-test.txt'
 
       - name: Verify Python with Black
-        # Uses black 26.1.0
-        uses: psf/black@6305bf1ae645ab7541be4f5028a86239316178eb
+        uses: psf/black@6305bf1ae645ab7541be4f5028a86239316178eb # Uses black 26.1.0
         with:
           options: "--check --verbose"
 
       - name: Setup node
-        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238
+        uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
         with:
           node-version: "20"
 
