--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,6 @@ permissions:
 
 on: 
   workflow_call:
-    inputs:
-      branch_ref:
-        required: true
-        type: string
     secrets:
       MAILJET_API_KEY:
         required: true
@@ -96,9 +92,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
-        with:
-          ref: ${{ inputs.branch_ref }}
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
       # 👇 We need to set up the env vars from values taken from the matrix
       - name: Set up worker env vars
@@ -106,14 +100,14 @@ jobs:
           echo "GITHUB_WORKER_ID=${{matrix.worker[0]}}" >> $GITHUB_ENV
 
       - name: Setup Python
-        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
+        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
           python-version: '3.11.9'
           cache: 'pip'
           cache-dependency-path: '**/requirements/requirements-test.txt'
       
       - name: Setup caching
-        uses: actions/cache@8b402f58fbc84540c8b491a91e594a4576fec3d7
+        uses: actions/cache@8b402f58fbc84540c8b491a91e594a4576fec3d7 # v5.0.2
         id: cache
         with:
           path: ${{ env.pythonLocation }}/lib/python3.11/site-packages/*
